--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/asanscha/LIRI/issues"
   },
-  "homepage": "https://github.com/asanscha/LIRI#readme"
+  "homepage": "https://github.com/asanscha/LIRI#readme",
+  "dependencies": {
+    "node-spotify-api": "^1.1.1"
+  }
 }
