--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "moment": "^2.24.0",
-    "node-spotify-api": "^1.1.1"
+    "node-spotify-api": "^1.1.1",
+    "request": "^2.88.0",
+    "spotify": "^0.3.0",
+    "twitter": "^1.7.1"
   }
 }
